angular/src/app/features/forum/children/my-groups/my-groups.component.css
:host {
  display: flex;
  gap: var(--gf-8);
  flex-direction: column;
  width: 100%;
}

.gf-card-group-create-search {
  padding: var(--gf-12) var(--gf-16);
  width: 100%;
  overflow: hidden;
  box-shadow: none;
  border-radius: var(--gf-16);

  gap: 3.75rem;

}

/* Create Group */

.create-group-wrapper {
  gap: var(--gf-10);
}

.gf-badge-create-group-btn {
  & svg {
    width: 1.25rem;
    height: 1.25rem;
  }
}

.create-group-text {
  font-family: var(--gf-font-ugc);
  font-size: var(--gf-14);

  color: var(--dark-text);
}

/* Search Group */

.search-group-wrapper {
  flex: 1;
}

.search-bar {
  background-color: var(--dark-bg-dark);
  border-radius: 100px;
  padding: 0rem 0.938rem 0rem var(--gf-10);
  gap: var(--gf-10);
  flex:1;
}

.search-input {
  background: none;
  border: none;
  color: var(--dark-text);
  font-family: var(--gf-font-ugc);
  flex: 1;
}

.search-input:focus {
  outline: none;
}

.gf-badge-search-group-btn {
  background: none;
  border: none;
  box-shadow: none;

  & svg {
    width: var(--gf-20);
    height: var(--gf-20);
    color: var(--dark-text);
  }
}


/* Group Listing ==== */

.gf-card-group-listing {
  padding: var(--gf-16);
  width: 100%;
  overflow: hidden;
  box-shadow: none;
  border-radius: var(--gf-16);

  gap: var(--gf-20);
}

.group-image {
  width: 6rem;
  width: 6rem;
  border-radius: var(--gf-8);
}

.group-info-and-stats {
  gap: var(--gf-12);
}

.group-name-stats{
  min-height: 0px;
  max-height: 32px;
  overflow: hidden;
}

.group-name {
  font-family: var(--gf-font-ugc);
  font-size: var(--gf-16);
}

.stats-wrapper {
  gap: var(--gf-6);
}

.group-description {
  font-family: var(--gf-font-ugc);
  font-size: var(--gf-12);

}

/* Show More */

.show-more-text {
  font-family: var(--gf-font-main);
  font-size: var(--gf-16);
  color: var(--gf-primary);

  color: var(--gf-primary);
  --underline-width: 100%;

  background:none;
  border: none;

  text-decoration: underline;
}

/* New group */

.new-group-btn-wrapper {
  border: 2px dashed var(--dark-bg-light);
  border-radius: var(--gf-16);
  padding: 1.563rem 1.563rem;
  background: none;
  margin-bottom: var(--gf-10);
}

.new-group-create-icon {
  width: var(--gf-32);
  height: var(--gf-32);
  color: var(--dark-text-muted);
}

.new-group-create-text {
  font-family: var(--gf-font-date);
  font-size: var(--gf-12);
  color: var(--dark-text-muted);
}

.new-group-btn-wrapper:hover .new-group-create-icon,
.new-group-btn-wrapper:hover .new-group-create-text {
  color: var(--dark-text);

}

